# cognitus

./: .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  START.md  docker-compose.yml  requirements.txt  start.sh
academic_docs/: README.md  research_papers.md
academic_docs/behaviors/: academic_resources.md
academic_docs/cognition/: academic_resources.md
academic_docs/integration/: academic_resources.md
academic_docs/memory/: academic_resources.md
academic_docs/perception/: academic_resources.md
academic_docs/voice/: academic_resources.md
config/: cognitus_config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION.md  README.md
scripts/: build_workspace.sh  download_models.sh  setup_system.sh
src/cognitus_behaviors/: IMPROVEMENTS.md  README.md  package.xml  setup.py
src/cognitus_behaviors/cognitus_behaviors/: behavior_controller_node.py  primitive_actions.py  (+1 more)
src/cognitus_cognition/: IMPROVEMENTS.md  README.md  package.xml  setup.py
src/cognitus_integration/: CMakeLists.txt  README.md  package.xml
src/cognitus_integration/launch/: demo.launch.py  limo_pro.launch.py  simulation.launch.py
src/cognitus_memory/: IMPROVEMENTS.md  README.md  package.xml  setup.py
src/cognitus_perception/: CMakeLists.txt  IMPROVEMENTS.md  README.md  package.xml  setup.py
src/cognitus_perception/cognitus_perception/: anomaly_detector.py  perception_node.py  scene_graph_builder.py
src/cognitus_perception/config/: perception_config.yaml
src/cognitus_perception/msg/: AnomalyEvent.msg  DetectedObject.msg  SceneGraph.msg  SpatialRelation.msg
src/cognitus_voice/: IMPROVEMENTS.md  README.md  package.xml  setup.py
(+16 files in other folders)
